--- a/git/5. 合并分支.md
+++ b/git/5. 合并分支.md
@@ -22,7 +22,7 @@ b. **合并分支**
   git merge --log <分支2>
   ```
 
-- 将合并分支的提交历史压缩成一个提交：
+- 将分支2的所有提交压缩成一个提交进行合并：
 
   ```bash
   git merge --squash <分支2>
@@ -55,8 +55,11 @@ b. **合并分支**
 - 只合并某个特定的提交：
 
   ```bash
-  git cherry-pick <commit-hash>
+  git cherry-pick <目标版本>
   ```
+
+- 允许合并无关的历史:
+  git merge <分支2> --allow-unrelated-histories
 
 c. **创建新提交**
 合并后，Git 会将所有更改暂存，但不会自动创建提交。你需要手动创建一个新的提交：
