git新增: 文件9, 文件10

--- a/git/8. 回退版本.md
+++ b/git/8. 回退版本.md
@@ -87,7 +87,7 @@
     强制推送本地分支到远程仓库（这会覆盖远程仓库的历史）:
 
     ```bash
-    git push origin <分支名> --force
+    git push origin <分支名> --force-with-lease
     ```
 
   **注意**：强制推送会覆盖远程仓库的历史，这可能会导致问题，特别是如果其他人也在使用该分支。
