删除不必要的文件并更新 Git 操作文档，增加关于 rebase、pull 和 push 的详细说明

--- a/git/代码功能/4. 创建分支.md
+++ b/git/代码功能/4. 创建分支.md
@@ -10,18 +10,32 @@
 ### 2. 创建分支
 
 - 从**目标版本**创建一个新的分支
+  - 只创建
 
-```bash
-git branch <新分支名> <目标版本>
-```
+  ```bash
+  git branch <新分支名> <目标版本>
+  ```
+
+  - 创建并切换
+  
+  ```bash
+  git switch -c <新分支名> <目标版本>
+  ```
 
 - 创建**空白分支**（即没有任何提交历史的分支）
 
     a. 创建并切换到空白分支：
+  - 只创建
 
-    ```bash
-    git switch --orphan new-branch
-    ```
+  ```bash
+  git branch --orphan <新分支名>
+  ```
+
+  - 创建并切换
+
+  ```bash
+  git switch --orphan <新分支名>
+  ```
 
     b. 清理工作目录：
     创建空白分支后，如果当前工作目录中的文件仍然存在。为了确保分支完全空白，需要删除这些文件（除了 `.git` 目录）。
