更新 Git 文档，完善关于 rebase 的工作原理及推送权限的说明，新增 Fork 仓库的详细操作步骤

--- a/git/代码功能/10. rebase 的工作原理.md
+++ b/git/代码功能/10. rebase 的工作原理.md
@@ -2,7 +2,7 @@
 
 ### 1. **`git rebase` 的工作原理**
 
-`git rebase` 的核心功能是将一个分支的提交重新应用到另一个分支的顶部。
+`git rebase` 的核心功能是将一个分支的提交重新应用到另一个分支的顶部。当从远程仓库拉取最新的更改后，本地分支可能会落后于远程分支。使用 rebase 可以将你的本地更改重新应用到最新的远程分支上，保持分支的整洁。
 
 假设有以下提交历史：
 
@@ -40,7 +40,7 @@ A -> B -> C (master)
 
 - 强制推送
 
-    如果变基后提交历史发生改变,在尝试将更改推送到远程仓库时，需使用强制推送：
+    如果变基后提交历史发生改变,且发生的历史改变已经同步至远程仓库，则尝试将更改推送到远程仓库时，需使用强制推送：
 
     ```bash
     git push --force-with-lease
