整理 Git 文档，更新关于 git clone、切换分支时未跟踪文件及已跟踪文件的行为描述，增加 Fork 仓库的定义和目的说明

--- a/git/代码功能/1. 克隆仓库.md
+++ b/git/代码功能/1. 克隆仓库.md
@@ -1,16 +1,9 @@
-<<<<<<< HEAD
+### 1. git clone <仓库地址>
 
-在使用 Git 克隆仓库时，通常会自动添加一个默认的远程仓库，通常称为 `origin`。这是 Git 的标准行为，目的是方便用户在克隆后能够方便地与原始仓库进行交互（例如拉取更新或推送更改）。
+该命令会:
 
-### 为什么会有 `origin` 远程仓库？
-
-当你运行 `git clone` 命令时，Git 会：
-=======
-### 1. 运行 `git clone` 命令时，Git 会：
->>>>>>> 86e0e39 (内容整理)
-
-1. **复制仓库的内容**：将远程仓库的代码和历史记录复制到本地。
-2. **自动设置远程仓库**：将原始仓库的地址添加为远程仓库，并命名为 `origin`。
+a. **复制仓库的内容**：将远程仓库的代码和历史记录复制到本地。
+b. **自动设置远程仓库**：将原始仓库的地址添加为远程仓库，并命名为 `origin`。
 
 例如：
 
