--- a/git/代码功能/3. 更改连接协议.md
+++ b/git/代码功能/3. 更改连接协议.md
@@ -10,7 +10,7 @@
 
    输出类似于以下内容：
 
-   ```
+   ```bash
    origin  https://github.com/username/repo.git (fetch)
    origin  https://github.com/username/repo.git (push)
    ```
@@ -32,6 +32,6 @@
 
    如果连接成功，你会看到类似以下的输出：
 
-   ```
+   ```bash
    Hi username! You've successfully authenticated, but GitHub does not provide shell access.
    ```
