--- a/git/概念与场景/3. 切换分支时,未跟踪文件的变化.md
+++ b/git/概念与场景/3. 切换分支时,未跟踪文件的变化.md
@@ -33,7 +33,7 @@ git checkout main
 
 Git 会提示你存在未跟踪文件：
 
-```
+```bash
 warning: You have unmerged paths.
   (fix conflicts and run 'git commit')
   (use 'git merge --abort' to abort the merge)
@@ -45,7 +45,7 @@ Unmerged paths:
 
 如果你继续切换分支，Git 会显示类似的信息：
 
-```
+```bash
 warning: You have untracked files.
   (use 'git add <file>...' to include in what will be committed)
 
