--- a/git/概念与场景/4. 切换分支时,已跟踪但修改未提交的文件的变化.md
+++ b/git/概念与场景/4. 切换分支时,已跟踪但修改未提交的文件的变化.md
@@ -43,7 +43,7 @@ git checkout main
 
 Git 会提示冲突：
 
-```
+```bash
 error: Your local changes to the following files would be overwritten by checkout:
         file1.txt
 Please commit your changes or stash them before you switch branches.
