--- a/git/概念与场景/6. Fork 仓库.md
+++ b/git/概念与场景/6. Fork 仓库.md
@@ -1,4 +1,4 @@
-在GitHub等代码托管平台上，“Fork官方仓库到个人账户”是一个常见的操作，它允许用户创建一个官方仓库的副本到自己的账户中。这样，用户就可以在自己的副本上自由地进行修改和开发，而不会影响到原始的官方仓库。以下是详细的解释和操作步骤：
+“Fork (复刻)官方仓库到个人账户”是一个常见的操作，它允许用户创建一个官方仓库的副本到自己的账户中。这样，用户就可以在自己的副本上自由地进行修改和开发，而不会影响到原始的官方仓库。
 
 ### 1. **什么是Fork**
 
