新增VSCode克隆仓库前的连通性测试步骤及注意事项

--- a/Git/代码/1. 克隆仓库.md
+++ b/Git/代码/1. 克隆仓库.md
@@ -1,3 +1,25 @@
+VSCode第一次克隆仓库前需进行连通性测试，输入以下命令：
+
+```bash
+ssh -T git@github.com
+```
+
+然后运行结果会看到：
+
+```bash
+Are you sure you want to continue connecting (yes/no/[fingerprint])?
+```
+
+输入：
+
+```bash
+yes
+```
+
+然后回车,结束。
+
+**注意**：不执行以上步骤，VSCode克隆仓库时会一直弹窗提示“ or 具有指纹”。安装其他IDE并通过SSH克隆仓库起同样效果，可省略该步骤。
+
 ### 1. git clone <仓库地址>
 
 该命令会:
