--- a/Git/代码/2. 设置用户信息.md
+++ b/Git/代码/2. 设置用户信息.md
@@ -4,10 +4,10 @@
 
 ```bash
 # 设置全局用户名
-git config --global user.name "你的姓名"
+git config --global user.name "<姓名>"
 
 # 设置全局邮箱
-git config --global user.email "你的邮箱"
+git config --global user.email "<邮箱>"
 ```
 
 ### 2. **本地仓库设置**
@@ -16,10 +16,10 @@ git config --global user.email "你的邮箱"
 
 ```bash
 # 设置本地仓库的用户名
-git config user.name "你的姓名"
+git config user.name "<姓名>"
 
 # 设置本地仓库的邮箱
-git config user.email "你的邮箱"
+git config user.email "<邮箱>"
 ```
 
 ### 3. **查看当前设置**
@@ -45,7 +45,7 @@ git config user.email "你的邮箱"
 - 修改最近一次提交的用户信息：
 
 ```bash
-git commit --amend --author="你的姓名 <你的邮箱>"
+git commit --amend --author="<姓名> <邮箱>"
 ```
 
 - 修改多个提交的用户信息：
@@ -53,5 +53,3 @@ git commit --amend --author="你的姓名 <你的邮箱>"
 ```bash
 git rebase -i HEAD~N
 ```
-
-其中 `N` 是你想要修改的提交数量。在打开的编辑器中，将 `pick` 改为 `reword`，保存并退出。Git 会逐一暂停在每个提交上，让你可以使用 `git commit --amend` 修改用户信息。
