删除VSCode配置文件和Ubuntu新机初始化文档，更新设置文档以确保内容一致性

--- a/电脑使用技巧/Ubuntu/新机初始化.md
+++ b/电脑使用技巧/Ubuntu/新机初始化.md
@@ -14,9 +14,10 @@ sudo timedatectl set-local-rtc 1 --adjust-system-clock
 - Clash
 - 谷歌浏览器
 - VSCode
+- Git
+- Timeshift
 - Github（ web 应用）
 - Kimi（ web 应用）
 - 抖音（ web 应用）
-- Timeshift
 
-#### 5. Timeshift设置快照
+#### 5. Timeshift 创建快照
